action fix, super z-index

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -47,6 +47,10 @@ pre {
     background: lighten($gray-color, 5%);
 }
 
+sup {
+    z-index: -1;
+}
+
 figcaption {
     font-size: .875em;
     color: darken($gray-color, 10%);
